--- a/buycurium/index.html
+++ b/buycurium/index.html
@@ -37,13 +37,13 @@
   <header class="js-header" id="header">
     <nav class="header__nav">
       <ul>
-        <li><a  class="js-btn" href="../index.html">Curium</a></li>		
-        <li><a  class="js-btn focus" href="../index.html" >Exchanges</a></li>		
-        <li><a  class="js-btn" href="../index.html" >Masternodes</a></li>
-        <li><a  class="js-btn" href="../index.html">Wallet</a></li>
-        <li><a  class="js-btn" href="../index.html">Resources</a></li>
-        <li><a  class="js-btn" href="../index.html">FAQ</a></li>
-        <li><a  class="js-btn" href="../index.html">Contact</a></li>
+        <li><a  class="js-btn" href="../index.html#Curium">Curium</a></li>		
+        <li><a  class="js-btn focus" href="../index.html#Exchanges" >Exchanges</a></li>		
+        <li><a  class="js-btn" href="../index.html#Masternodes" >Masternodes</a></li>
+        <li><a  class="js-btn" href="../index.html#Wallet">Wallet</a></li>
+        <li><a  class="js-btn" href="../index.html#Resources">Resources</a></li>
+        <li><a  class="js-btn" href="../index.html#FAQ">FAQ</a></li>
+        <li><a  class="js-btn" href="../index.html#Contact">Contact</a></li>
         <li class="buttond"><a class="js-btn">Buy Curium</a></li>	      
        </ul>
     </nav>
