--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 
 
-  <section class="  intro js-section">
+  <section id="Curium" class="  intro js-section">
     <article class="odd">
       <h2 class="blocktitle">Curium</h2>
       <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
@@ -97,7 +97,7 @@
   </section>
   ffff 
 
-  <section class="swap js-section">
+  <section id="Exchanges" class="swap js-section">
     <article>
       <h2 class="blocktitle">Exchanges</h2>
       <div class="block">
@@ -111,7 +111,7 @@
     </article>
   </section>
 
-  <section class="masternodes js-section">
+  <section id="Masternodes" class="masternodes js-section">
     <article class="odd">
       <h2 class="blocktitle">Masternodes</h2>
       <div class="block">
@@ -129,7 +129,7 @@
   </section>
 
 
-  <section class="wallet js-section">
+  <section id="Wallet" class="wallet js-section">
     <article>
       <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
@@ -156,7 +156,7 @@
     </article>
   </section>
 
-  <section class="resources js-section">
+  <section id="Resources" class="resources js-section">
     <article class="odd">
       <h2 class="blocktitle">Resources</h2>
       <div class="explorer">
@@ -165,7 +165,7 @@
     </article>
   </section>
 
-  <section class="  faq js-section">
+  <section id="FAQ" class="  faq js-section">
     <article>
 
       <h2 class="blocktitle">Questions</h2>
@@ -204,7 +204,7 @@
     </article>
   </section>
 
-  <footer class="js-section">
+  <footer id="Contact" class="js-section">
     <nav class="footer__nav">
       <ul>
         <li>
