added deviders so i could add ids

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
   </div>
 
-
-  <section id="Curium" class="  intro js-section">
+  <div id="Curium">
+  <section  class="  intro js-section">
     <article class="odd">
       <h2 class="blocktitle">Curium</h2>
       <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
@@ -94,10 +94,10 @@
       </div>
 
     </article>
-  </section>
-  ffff 
-
-  <section id="Exchanges" class="swap js-section">
+  </section> 
+  </div>
+  <div id="Exchanges">
+  <section class="swap js-section">
     <article>
       <h2 class="blocktitle">Exchanges</h2>
       <div class="block">
@@ -110,8 +110,9 @@
       </div>
     </article>
   </section>
-
-  <section id="Masternodes" class="masternodes js-section">
+  </div>
+  <div id="Masternodes">
+  <section  class="masternodes js-section">
     <article class="odd">
       <h2 class="blocktitle">Masternodes</h2>
       <div class="block">
@@ -127,9 +128,9 @@
       </div>
     </article>
   </section>
-
-
-  <section id="Wallet" class="wallet js-section">
+  </div>
+  <div id="Wallet">
+  <section  class="wallet js-section">
     <article>
       <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
@@ -155,8 +156,9 @@
       </div>
     </article>
   </section>
-
-  <section id="Resources" class="resources js-section">
+  </div
+  <div id="Resources">
+  <section  class="resources js-section">
     <article class="odd">
       <h2 class="blocktitle">Resources</h2>
       <div class="explorer">
@@ -164,8 +166,9 @@
 	<a href="https://altexplorer.co/coin/cru" target="_blank">Altexplorer</a>
     </article>
   </section>
-
-  <section id="FAQ" class="  faq js-section">
+  </div>
+  <div id="FAQ">
+  <section  class="  faq js-section">
     <article>
 
       <h2 class="blocktitle">Questions</h2>
@@ -203,7 +206,7 @@
       </div>
     </article>
   </section>
-
+  </div>
   <footer id="Contact" class="js-section">
     <nav class="footer__nav">
       <ul>
