--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
   </div>
 
 
-  <section id="Curium" class="  intro js-section">
+  <section  class="  intro js-section">
     <article class="odd">
-      <h2 class="blocktitle">Curium</h2>
+      <h2 id="Curium" class="blocktitle">Curium</h2>
       <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
         Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
@@ -97,9 +97,9 @@
   </section>
   ffff 
 
-  <section id="Exchanges" class="swap js-section">
+  <section  class="swap js-section">
     <article>
-      <h2 class="blocktitle">Exchanges</h2>
+      <h2 id="Exchanges" class="blocktitle">Exchanges</h2>
       <div class="block">
         <p>
 		There are no exchanges on the new network atm
