--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <section  class="  intro js-section">
     <article class="odd">
-      <h2 id="Curium" class="blocktitle">Curium</h2>
+      <h2 id="Curium" class="blocktitle h2span">Curium</h2>
       <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
         Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
@@ -99,7 +99,7 @@
 
   <section  class="swap js-section">
     <article>
-      <h2 id="Exchanges" class="blocktitle">Exchanges</h2>
+      <h2 id="Exchanges" class="blocktitle h2span">Exchanges</h2>
       <div class="block">
         <p>
 		There are no exchanges on the new network atm
@@ -111,9 +111,9 @@
     </article>
   </section>
 
-  <section id="Masternodes" class="masternodes js-section">
+  <section  class="masternodes js-section">
     <article class="odd">
-      <h2 class="blocktitle">Masternodes</h2>
+      <h2 id="Masternodes" class="blocktitle h2span">Masternodes</h2>
       <div class="block">
         <p>Masternodes are a secondary network of nodes so that blockchain can include features such as ‘Instant Send’ and ‘Anonymous
           Transactions’ as well as increasing the overall security. Curium requires 10,000CRU collateral to secure a masternode,
@@ -129,9 +129,9 @@
   </section>
 
 
-  <section id="Wallet" class="wallet js-section">
+  <section  class="wallet js-section">
     <article>
-      <h3 class="subtitle">Download the latest Curium wallet</h3>
+      <h3 id="Wallet" class="subtitle h2span">Download the latest Curium wallet</h3>
       <div class="wallets">
     
            <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit</button></a> 
@@ -156,9 +156,9 @@
     </article>
   </section>
 
-  <section id="Resources" class="resources js-section">
+  <section  class="resources js-section">
     <article class="odd">
-      <h2 class="blocktitle">Resources</h2>
+      <h2 id="Resources" class="blocktitle h2span">Resources</h2>
       <div class="explorer">
         <a href="https://explorer.curiumofficial.com" target="_blank">Official Blockexplorer</a>
 	<a href="https://altexplorer.co/coin/cru" target="_blank">Altexplorer</a>
