--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 
 
-  <section  class="  intro js-section h2span">
+  <section  class="  intro js-section ">
     <article class="odd">
       <h2 id="Curium" class="blocktitle ">Curium</h2>
       <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
@@ -97,7 +97,7 @@
   </section>
 
 
-  <section  class="swap js-section h2span">
+  <section  class="swap js-section ">
     <article>
       <h2 id="Exchanges" class="blocktitle">Exchanges</h2>
       <div class="block">
@@ -111,7 +111,7 @@
     </article>
   </section>
 
-  <section  class="masternodes js-section h2span">
+  <section  class="masternodes js-section ">
     <article class="odd">
       <h2 id="Masternodes" class="blocktitle=">Masternodes</h2>
       <div class="block">
@@ -129,7 +129,7 @@
   </section>
 
 
-  <section  class="wallet js-section h2span">
+  <section  class="wallet js-section ">
     <article>
       <h3 id="Wallet" class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
@@ -156,7 +156,7 @@
     </article>
   </section>
 
-  <section  class="resources js-section h2span">
+  <section  class="resources js-section ">
     <article class="odd">
       <h2 id="Resources" class="blocktitle">Resources</h2>
       <div class="explorer">
