--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <section  class="masternodes js-section ">
     <article class="odd">
-      <h2 id="Masternodes" class="blocktitle=">Masternodes</h2>
+      <h2 id="Masternodes" class="blocktitle">Masternodes</h2>
       <div class="block">
         <p>Masternodes are a secondary network of nodes so that blockchain can include features such as ‘Instant Send’ and ‘Anonymous
           Transactions’ as well as increasing the overall security. Curium requires 10,000CRU collateral to secure a masternode,
