--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="header__nav">
       <ul>
         <li><a  class="js-btn">Curium</a></li>		
-        <li><a  class="js-btn focus">Exchanges</a></li>		
+        <li><a  class="js-btn ">Community</a></li>		
         <li><a  class="js-btn">Masternodes</a></li>
         <li><a  class="js-btn">Wallet</a></li>
         <li><a  class="js-btn">Resources</a></li>
@@ -99,10 +99,10 @@
 
   <section  class="swap js-section ">
     <article>
-      <h2 id="Exchanges" class="blocktitle">Exchanges</h2>
+      <h2 id="Exchanges" class="blocktitle">Community</h2>
       <div class="block">
         <p>
-		There are no exchanges on the new network atm
+		adding this section
         </a>
         <p>
 
