--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/button.css">
+  <link rel="stylesheet" href="css/fontawesome.min">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   
 </head>
@@ -134,7 +135,7 @@
       <h3 id="Wallet" class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
     
-           <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit</button></a> 
+           <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit<i class="fa fa-windows"></i></button></a> 
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank"><button class="raise">Windows 64-bit</button></a> 
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank"><button class="raise">Mac</button></a>  
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"><button class="raise">Mac High Sierra</button></a>	   
