--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@
       <h3 id="Wallet" class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
     
-           <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit <i class="fab fa-windows"></i></button></a> 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank"><button class="raise">Windows 64-bit <i class="fab fa-windows"></i></button></a> 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank"><button class="raise">Mac <i class="fab fa-apple"></i></button></a>  
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"><button class="raise">Mac High Sierra <i class="fab fa-apple"></i></button></a>	   
+           <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit <i class="fab fa-windows fa-lg"></i></button></a> 
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank"><button class="raise">Windows 64-bit <i class="fab fa-windows fa-lg"></i></button></a> 
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank"><button class="raise">Mac <i class="fab fa-apple fa-lg"></i></button></a>  
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"><button class="raise">Mac High Sierra <i class="fab fa-apple fa-lg"></i></button></a>	   
 	      
 	   <div class="wallets"> 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 32-bit <i class="fab fa-linux"></i></button></a>  
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 64-bit <i class="fab fa-linux"></i></button></a>
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 32-bit <i class="fab fa-linux fa-lg"></i></button></a>  
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 64-bit <i class="fab fa-linux fa-lg"></i></button></a>
 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"><button class="raise">Raspberry Pi/ ARM <i class="fab fa-linux"></i></button></a>	 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium" target="_blank"><button class="raise">Source Code <i class="fab fa-github"></i></button></a>	
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"><button class="raise">Raspberry Pi/ ARM <i class="fab fa-linux fa-lg"></i></button></a>	 
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium" target="_blank"><button class="raise">Source Code <i class="fab fa-github fa-lg"></i></button></a>	
 	      </div>
 		   <!--
         <a href="" target="_blank">
