added community icons

--- a/index.html
+++ b/index.html
@@ -100,14 +100,18 @@
 
   <section  class="swap js-section ">
     <article>
-      <h2 id="Exchanges" class="blocktitle">Community</h2>
+      <h2 id="Exchanges" class="blocktitle">Join the Curium Blockchain</h2>
+	  <h3 id="Exchanges" class="blocktitle">The Backbone of our Blockchain is Community</h2>
       <div class="block">
-        <p>
-		adding this section
-        </a>
-        <p>
+       <a href="" target="_blank"><i class="fab fa-bitcoin fa-6x"></i></a>
+	   <a href="" target="_blank"><i class="fab fa-discord fa-6x"></i></a>
+	   <a href="" target="_blank"><i class="fab fa-reddit fa-6x"></i></a>
+	   </div>
+	   <div class="block">
+	   <a href="" target="_blank"><i class="fab fa-telegram fa-6x"></i></a>
+	   <a href="" target="_blank"><i class="fab fa-twitter-square fa-6x"></i></a>
+	   <a href="" target="_blank"><i class="fab fa-youtube fa-6x"></i></a>
 
-        </p>
       </div>
     </article>
   </section>
@@ -135,7 +139,7 @@
       <h3 id="Wallet" class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
     
-           <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit <i class="fab fa-windows fa-lg"></i></button></a> 
+       <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit <i class="fab fa-windows fa-lg"></i></button></a> 
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank"><button class="raise">Windows 64-bit <i class="fab fa-windows fa-lg"></i></button></a> 
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank"><button class="raise">Mac <i class="fab fa-apple fa-lg"></i></button></a>  
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"><button class="raise">Mac High Sierra <i class="fab fa-apple fa-lg"></i></button></a>	   
