--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     <article>
       <h2 id="Exchanges" class="blocktitle">Join the Curium Blockchain</h2>
 	  <h3 id="Exchanges" class="blocktitle">The Backbone of our Blockchain is Community</h2>
-      <div class="block">
-       <a href="" target="_blank"><i class="fab fa-bitcoin fa-6x"></i></a>
-	   <a href="" target="_blank"><i class="fab fa-discord fa-6x"></i></a>
-	   <a href="" target="_blank"><i class="fab fa-reddit fa-6x"></i></a>
+      <div class="row">
+       <div class="column"><a href="" target="_blank"><i class="fab fa-bitcoin fa-5x"></i></a></div>
+	   <div class="column"><a href="" target="_blank"><i class="fab fa-discord fa-5x"></i></a></div>
+	   <div class="column"><a href="" target="_blank"><i class="fab fa-reddit fa-5x"></i></a></div>
 	   </div>
-	   <div class="block">
-	   <a href="" target="_blank"><i class="fab fa-telegram fa-6x"></i></a>
-	   <a href="" target="_blank"><i class="fab fa-twitter-square fa-6x"></i></a>
-	   <a href="" target="_blank"><i class="fab fa-youtube fa-6x"></i></a>
+	   <div class="row">
+	   <div class="column"><a href="" target="_blank"><i class="fab fa-telegram fa-5x"></i></a></div>
+	   <div class="column"><a href="" target="_blank"><i class="fab fa-twitter-square fa-5x"></i></a></div>
+	   <div class="column"><a href="" target="_blank"><i class="fab fa-youtube fa-5x"></i></a></div>
 
       </div>
     </article>
