--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     <article>
       <h2 id="Exchanges" class="blocktitle">Join the Curium Blockchain</h2>
 	  <h4 class="blocktitlehalf">The Backbone of our Blockchain is Community</h2>
-      <div class="row">
-       <div class="column"><a href="" target="_blank"><i class="fab fa-bitcoin fa-4x"></i></a></div>
-	   <div class="column"><a href="" target="_blank"><i class="fab fa-discord fa-4x"></i></a></div>
-	   <div class="column"><a href="" target="_blank"><i class="fab fa-reddit fa-4x"></i></a></div>
+      <div class="wallets">
+       <a href="" target="_blank"><i class="fab fa-bitcoin fa-4x"></i></a>
+	   <a href="" target="_blank"><i class="fab fa-discord fa-4x"></i></a>
+	   <a href="" target="_blank"><i class="fab fa-reddit fa-4x"></i></a>
 	   </div>
-	   <div class="row">
-	   <div class="column"><a href="" target="_blank"><i class="fab fa-telegram fa-4x"></i></a></div>
-	   <div class="column"><a href="" target="_blank"><i class="fab fa-twitter-square fa-4x"></i></a></div>
-	   <div class="column"><a href="" target="_blank"><i class="fab fa-youtube fa-4x"></i></a></div>
+	   <div class="wallets">
+	   <a href="" target="_blank"><i class="fab fa-telegram fa-4x"></i></a>
+	   <a href="" target="_blank"><i class="fab fa-twitter-square fa-4x"></i></a>
+	   <a href="" target="_blank"><i class="fab fa-youtube fa-4x"></i></a>
 
       </div>
     </article>
