--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/button.css">
+  <link rel="stylesheet" href="/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   
@@ -103,12 +104,12 @@
       <h2 id="Exchanges" class="blocktitle">Join the Curium Blockchain</h2>
 	  <h4 class="blocktitlehalf">The Backbone of our Blockchain is Community</h2>
       <div class="com">
-       <a href="" target="_blank"><i class="fab fa-bitcoin fa-4x"></i></a>
-	   <a href="" target="_blank"><i class="fab fa-discord fa-4x"></i></a>
-	   <a href="" target="_blank"><i class="fab fa-reddit fa-4x"></i></a>
+       <a href="https://bitcointalk.org/index.php?topic=3076542.0" target="_blank"><i class="fab fa-bitcoin fa-4x"></i></a>
+	   <a href="https://discord.gg/BNxtX7b" target="_blank"><i class="fab fa-discord fa-4x"></i></a>
+	   <a href="https://www.reddit.com/r/CuriumOfficial/" target="_blank"><i class="fab fa-reddit fa-4x"></i></a>
 	   </div>
 	   <div class="com">
-	   <a href="" target="_blank"><i class="fab fa-telegram fa-4x"></i></a>
+	   <a href="https://t.me/CuriumOfficial" target="_blank"><i class="fa fa-steemit fa-4x"></i></a>
 	   <a href="" target="_blank"><i class="fab fa-twitter-square fa-4x"></i></a>
 	   <a href="" target="_blank"><i class="fab fa-youtube fa-4x"></i></a>
 
