--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/button.css">
-  <link rel="stylesheet" href="awecss/css/fontawesome.min.css">
+  <link rel="stylesheet" href="awecss/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   
@@ -111,7 +111,7 @@
 	   <div class="com">
 	   <a href="https://t.me/CuriumOfficial" target="_blank"><i class="fab fa-telegram fa-4x"></i></a>
 	   <a href="" target="_blank"><i class="fab fa-twitter-square fa-4x"></i></a>
-	   <a href="" target="_blank"><i class="fab fa-steemit fa-4x"></i></a>
+	   <a href="" target="_blank"><i class="fa fa-steemit fa-4x"></i></a>
 
       </div>
     </article>
