--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	   <div class="com">
 	   <a href="https://t.me/CuriumOfficial" target="_blank"><i class="fab fa-telegram fa-4x"></i></a>
 	   <a href="" target="_blank"><i class="fab fa-twitter-square fa-4x"></i></a>
-	   <a href="" target="_blank"><i class="fa fa-steemit fa-4x"></i></a>
+	   <a href="" target="_blank"><i class="fa fa-steemit"></i></a>
 
       </div>
     </article>
