Ok now the community section is all good

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 	   </div>
 	   <div class="com">
 	   <a href="https://t.me/CuriumOfficial" target="_blank"><i class="fab fa-telegram fa-4x"></i></a>
-	   <a href="" target="_blank"><i class="fab fa-twitter-square fa-4x"></i></a>
-	   <a href="" target="_blank"><i class="cc STEEM-alt fa-4x"></i></a>
+	   <a href="https://twitter.com/CuriumOfficial" target="_blank"><i class="fab fa-twitter-square fa-4x"></i></a>
+	   <a href="https://steemit.com/@curiumofficial" target="_blank"><i class="cc STEEM-alt fa-4x"></i></a>
 
       </div>
     </article>
