added fill color on hover

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
       <h2 id="Exchanges" class="blocktitle">Join the Curium Blockchain</h2>
 	  <h4 class="blocktitlehalf">The Backbone of our Blockchain is Community</h2>
       <div class="com">
-       <a href="https://bitcointalk.org/index.php?topic=3076542.0" target="_blank"><i class="fab fa-bitcoin fa-4x"></i></a>
-	   <a href="https://discord.gg/BNxtX7b" target="_blank"><i class="fab fa-discord fa-4x"></i></a>
-	   <a href="https://www.reddit.com/r/CuriumOfficial/" target="_blank"><i class="fab fa-reddit fa-4x"></i></a>
+       <a href="https://bitcointalk.org/index.php?topic=3076542.0" target="_blank"><i class="fab fa-bitcoin fa-4x iccon"></i></a>
+	   <a href="https://discord.gg/BNxtX7b" target="_blank"><i class="fab fa-discord fa-4x iccon"></i></a>
+	   <a href="https://www.reddit.com/r/CuriumOfficial/" target="_blank"><i class="fab fa-reddit fa-4x iccon"></i></a>
 	   </div>
 	   <div class="com">
-	   <a href="https://t.me/CuriumOfficial" target="_blank"><i class="fab fa-telegram fa-4x"></i></a>
-	   <a href="https://twitter.com/CuriumOfficial" target="_blank"><i class="fab fa-twitter-square fa-4x"></i></a>
-	   <a href="https://steemit.com/@curiumofficial" target="_blank"><i class="cc STEEM-alt fa-4x"></i></a>
+	   <a href="https://t.me/CuriumOfficial" target="_blank"><i class="fab fa-telegram fa-4x iccon"></i></a>
+	   <a href="https://twitter.com/CuriumOfficial" target="_blank"><i class="fab fa-twitter-square fa-4x iccon"></i></a>
+	   <a href="https://steemit.com/@curiumofficial" target="_blank"><i class="cc STEEM-alt fa-4x iccon"></i></a>
 
       </div>
     </article>
