--- a/index.html
+++ b/index.html
@@ -174,36 +174,36 @@
   <section id="FAQ" class="faq js-section">
     <article>
 
-      <h2 class="blocktitle">Questions</h2>
+      <h2 class="blocktitle">Frequently Asked Questions</h2>
       <div class="questions">
         <div class="question">
-          <h3 class="">Why community driven?</h3>
+          <h3 class="">Why be community focused and driven?</h3>
           <div class="answer">
-            People of the crypto world has had their fair share of leaders with questionable motivations. Giving the power to the community
-            is the only way to achieve true decentralisation
+          The people of the crypto world have had their share of leaders with questionable motives. Giving power back to the community is the only true way to achieve decentralization.< /br>
+Curium Crews (CRU'S) allow members to contribute, lead, or even start different CRU’s. CRU’s allow user to freely collaborate on projects that the community deems of value. CRU’s are self-managed and directed. CRU’s are voted on and allocated budget from the CRU Treasury through CRU proposals.< /br>
+CRU Proposals allow for Curium master node holders to dictate the direction of the coin by allocating funds to from the CRU Treasury. Users can vote on the CRU proposals they think best serve the future direction of the coin. Members will also be able to allocate funds from the treasury to CRU Leaders.
           </div>
         </div>
 
         <div class="question">
           <h3 class="">Who is the Curium Team?</h3>
           <div class="answer">
-            Developers, contributors and moderators originating from the community that are stepping up and taking various responsibilities
-            for a brighter future of Curium.
+            Curium Users are the Curium Team! Users are encouraged to contribute to Curium’s growth in the way they see fit. With CRU’s and CRU proposals Curium members can help by contributing skills they already have or work with teams to gain new skills. We currently have a strongly committed group of Developers, Contributors, and Moderators. All of which actively participate in contributing to a brighter future for Curium.
           </div>
         </div>
 
         <div class="question">
           <h3 class="">Who is the community?</h3>
           <div class="answer">
-            Individuals who are fed up with their voices going unheard, now they are gathering to shape their destiny. Working to ensure
-            their efforts and collaboration lead to a brighter future for all
+            The Curium community is comprised of individuals of all walks of life and skill sets. Individuals who wish to have a voice their concerns, or a say in the direction. As a community centered coin user volunteer their time and skills, in collaboration with others, to bring a brighter future into reality.
           </div>
         </div>
 
         <div class="question">
-          <h3 class="">Why POS?</h3>
+          <h3 class="">Why POS with Masternodes?</h3>
           <div class="answer">
-            POS is ecofriendy and supports the people who hold Curium without it Curium would be killing the Earth instead of starting a revalution 
+            POS (Proof-of-Stake) is an Eco-friendly alternative to POW (Proof-of-Work). Curium is committed to a better future and with the lower power consumption of POS, Curium stays true to that. It also incentivizes curium’s holders of all sizes by allocating 40% of the block reward to stakers.< /br>
+	Masternodes or (CRU nodes) not only enable lightning fast transactions and stability, but they also add extended functionality to the network. They allow for governance that directs and funds the future development and outreach of Curium through CRU Proposals. Masternode holders are also granted voting rights on CRU Proposals and CRU Treasury fund allocation. Since Master nodes allow these additional features, they are granted 60% of the block reward.
           </div>
         </div>
       </div>
