--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ CRU Proposals allow for Curium master node holders to dictate the direction of t
         <div class="question">
           <h3 class="">Why POS with Masternodes?</h3>
           <div class="answer">
-            POS (Proof-of-Stake) is an Eco-friendly alternative to POW (Proof-of-Work). Curium is committed to a better future and with the lower power consumption of POS, Curium stays true to that. It also incentivizes curium’s holders of all sizes by allocating 40% of the block reward to stakers.< /br>
+            POS (Proof-of-Stake) is an Eco-friendly alternative to POW (Proof-of-Work). Curium is committed to a better future and with the lower power consumption of POS, Curium stays true to that. It also incentivizes curium’s holders of all sizes by allocating 40% of the block reward to stakers.<br>
 	Masternodes or (CRU nodes) not only enable lightning fast transactions and stability, but they also add extended functionality to the network. They allow for governance that directs and funds the future development and outreach of Curium through CRU Proposals. Masternode holders are also granted voting rights on CRU Proposals and CRU Treasury fund allocation. Since Master nodes allow these additional features, they are granted 60% of the block reward.
           </div>
         </div>
