--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <h3 class="">Why be community focused and driven?</h3>
           <div class="answer">
           The people of the crypto world have had their share of leaders with questionable motives. Giving power back to the community is the only true way to achieve decentralization.<br>
-Curium Crews (CRU'S) allow members to contribute, lead, or even start different CRU’s. CRU’s allow user to freely collaborate on projects that the community deems of value. CRU’s are self-managed and directed. CRU’s are voted on and allocated budget from the CRU Treasury through CRU proposals.< /br>
+Curium Crews (CRU'S) allow members to contribute, lead, or even start different CRU’s. CRU’s allow user to freely collaborate on projects that the community deems of value. CRU’s are self-managed and directed. CRU’s are voted on and allocated budget from the CRU Treasury through CRU proposals.<br>
 CRU Proposals allow for Curium master node holders to dictate the direction of the coin by allocating funds to from the CRU Treasury. Users can vote on the CRU proposals they think best serve the future direction of the coin. Members will also be able to allocate funds from the treasury to CRU Leaders.
           </div>
         </div>
