--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section  class="  intro js-section ">
     <article class="odd">
       <h2 id="Curium" class="blocktitle ">Curium</h2>
-      <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
+      <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralization by giving power to the voice of individuals.
         Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
         1-minute block times, you will have your funds available anywhere and anytime.</p>
@@ -120,17 +120,18 @@
 
   <section  class="masternodes js-section ">
     <article class="odd">
-      <h2 id="Masternodes" class="blocktitle">Masternodes</h2>
+      <h2 id="Masternodes (CRU Nodes)" class="blocktitle">Masternodes</h2>
       <div class="block">
-        <p>Masternodes are a secondary network of nodes so that blockchain can include features such as ‘Instant Send’ and ‘Anonymous
-          Transactions’ as well as increasing the overall security. Curium requires 10,000CRU collateral to secure a masternode,
-          where it will need to be held on a static IP. The team at Curium has created one of the easiest installation guides
-          that even a first-timer can set up a masternode quickly and easily.
+        <p>CRU nodes are a secondary layer network of nodes that enable features such as Instant Sent, Anonymous Transactions, and Governance. CRU nodes require 10,000 Curium to be held on a static IP with 24/7 uptime. In return for securing the network and allowing for these features 60% of the block reward is allocated to CRU nodes.  CRU node holders also gain the ability to vote on CRU proposals which help to steer the direction of Curium. The Curium team has created one of the easiest to follow installation guides and have around the clock support on the discord channel.
         </p>
         <p>
-          check out the guide for setup:
-          <a href="https://github.com/Curium/curium-docs/blob/master/Documentation/masternode_setup_vps.md">Masternode setup</a>
+          Check out our easy to follow install guide:
+          <a href="https://github.com/Curium/curium-docs/blob/master/Documentation/masternode_setup_vps.md">CRU Node Installation Guide</a>
         </p>
+	<p>
+	  Reach out to support on the '#masternodes', or '#support' channels of our Discord for around the clock support.
+		<a href="https://discord.gg/XEZwEVv">Link to Curium's Discord Channel</a>
+	</p>
       </div>
     </article>
   </section>
