--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="com">
 
        <a href="https://bitcointalk.org/index.php?topic=3076542.0" target="_blank"><i class="fab fa-bitcoin fa-4x hover-red"></i></a>
-	   <a href="https://discord.gg/BNxtX7b" target="_blank"><i class="fab fa-discord fa-4x hover-red"></i></a>
+	   <a style="text-decoration: none;" href="https://discord.gg/BNxtX7b" target="_blank"><i class="fab fa-discord fa-4x hover-red"></i></a>
 	   <a href="https://www.reddit.com/r/CuriumOfficial/" target="_blank"><i class="fab fa-reddit fa-4x hover-red"></i></a>
 	   </div>
 	   <div class="com">
