--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <article class="odd">
       <h2 id="Curium" class="blocktitle ">Curium</h2>
       <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralization by giving power to the voice of individuals.
-        Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
+        Backed by the security of the latest in POS hashing algorithm it is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
         1-minute block times, you will have your funds available anywhere and anytime.</p>
 
