--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@
 	   <div class="wallets"> 
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 32-bit <i class="fab fa-linux fa-lg"></i></button></a>  
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 64-bit <i class="fab fa-linux fa-lg"></i></button></a>
-
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"><button class="raise">Raspberry Pi/ ARM <i class="fab fa-linux fa-lg"></i></button></a>	 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium" target="_blank"><button class="raise">Source Code <i class="fab fa-github fa-lg"></i></button></a>	
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"><button class="raise">Raspberry Pi/ ARM <i class="fab fa-linux fa-lg"></i></button></a>
+	   </div>
+	   <div class="wallets">
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium" target="_blank"><button class="raiseb">Source Code <i class="fab fa-github fa-lg"></i></button></a>
+	   <a style="text-decoration: none;" href="http://curiumofficial.com/paper" target="_blank"><button class="raiseb">Paper Wallet <i class="far fa-newspaper fa-lg"></i></button></a>	   
 	      </div>
 		   <!--
         <a href="" target="_blank">
