--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	   </div>
 	   <div class="wallets">
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium" target="_blank"><button class="raiseb">Source Code <i class="fab fa-github fa-lg"></i></button></a>
-	   <a style="text-decoration: none;" href="http://curiumofficial.com/paper" target="_blank"><button class="raiseb">Paper Wallet <i class="far fa-newspaper fa-lg"></i></button></a>	   
+	   <a style="text-decoration: none;" href="http://curiumofficial.com/paper" target="_blank"></button></a><button class="raiseb">Paper Wallet <i class="far fa-newspaper fa-lg"></i></button></a>	   
 	      </div>
 		   <!--
         <a href="" target="_blank">
