--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"><button class="raise">Raspberry Pi/ ARM <i class="fab fa-linux fa-lg"></i></button></a>  
 	   <div class="wallets">
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium" target="_blank"><button class="raiseb">Source Code <i class="fab fa-github fa-lg"></i></button></a>
-	   <a style="text-decoration: none;" href="http://curiumofficial.com/paper" target="_self"></button></a><button class="raiseb">Paper Wallet <i class="far fa-newspaper fa-lg"></i></button></a>	   
+	   <a style="text-decoration: none;" href="http://curiumofficial.com/paper" target="_self"></button><button class="raiseb">Paper Wallet <i class="far fa-newspaper fa-lg"></i></button></a>	   
 	   </div>
            </div>	
 	    <!--
