Fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/secure.svg" alt="">
-          <p>Curium is supported by multiple layers of security including both mining and masternode support</p>
+          <p>Curium is supported by multiple layers of security including both staking and masternode support</p>
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/team.svg" alt="">
