--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@ CRU Proposals allow for Curium master node holders to dictate the direction of t
     </nav>
   </footer>
 
-  <script src="js/particles.min.js"></script>
-  <script src="js/zenscroll-min.js?v=2"></script>
-  <script src="js/script1.js"></script>
+  <script src="js/particles.min.js?v=3"></script>
+  <script src="js/zenscroll-min.js?v=3"></script>
+  <script src="js/script1.js?v=3"></script>
 
 
 </body>
