Added Our forum to the website

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a  class="js-btn">Resources</a></li>
         <li><a  class="js-btn">FAQ</a></li>
         <li><a  class="js-btn">Contact</a></li>
+	<li><a  class="js-btn" href="http://forum.curiumofficial.com">Forum</a></li>      
         <li class="buttond"><a class="js-btn" href="buycurium/index.html">Buy Curium</a></li>	      
        </ul>
     </nav>
@@ -224,6 +225,9 @@ CRU Proposals allow for Curium master node holders to dictate the direction of t
         <li>
           <a href="https://discord.gg/BNxtX7b">Discord</a>
         </li>
+        <li>
+          <a href="http://forum.curiumofficial.com">Forum</a>
+        </li>	      
       </ul>
     </nav>
   </footer>
